# Retina

./: .gitignore  CMakeLists.txt  LICENSE  README.md  spec.md
.github/workflows/: ci.yml
apps/: m0_spine.cpp  m3_link.cpp  m4_compositor.cpp  m4_gpu.cpp  m5_rt_video.cpp
include/retina/: camsim.hpp  channel.hpp  decoder.hpp  double_buffer.hpp  encoded_frame.hpp  encoder.hpp  fec.hpp  feedback.hpp  frame.hpp  frame_buffer.hpp  jitter_buffer.hpp  latest_value.hpp  packet.hpp  spsc_ring.hpp  stream_aligner.hpp  triple_buffer.hpp
include/retina/align/: stream_aligner.hpp
include/retina/buffers/: double_buffer.hpp  latest_value.hpp  spsc_ring.hpp  triple_buffer.hpp
include/retina/core/: frame_buffer.hpp
include/retina/net/: channel.hpp  decoder.hpp  encoder.hpp  fec.hpp  feedback.hpp  jitter_buffer.hpp  packet.hpp
include/retina/rt/: rt.hpp
include/retina/sim/: camsim.hpp
include/retina/viz/: canvas.hpp  font5x7.hpp  gpu_canvas.hpp
src/: gpu_canvas.cu
tests/: mt_env.hpp  test_camsim.cpp  test_canvas.cpp  test_channel.cpp  test_decoder.cpp  test_double_triple.cpp  test_double_triple_mt.cpp  test_encoder.cpp  test_fec.cpp  test_feedback.cpp  test_jitter_buffer.cpp  test_latest_value.cpp  test_latest_value_alloc.cpp  test_latest_value_mt.cpp  test_packet.cpp  test_rt.cpp  test_spsc_ring.cpp  test_spsc_ring_mt.cpp  test_stream_aligner.cpp
